# Data-Science-Project

./: LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
random/: __init__.py  dataset.py  features.py  plots.py
random/modeling/: predict.py  train.py
